# relentless

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierrc.yaml  .releaserc.json  .tool-versions  .typos.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT.txt  README.md  commitlint.config.js  deny.toml  justfile  package-lock.json  package.json  public-api.txt  rust-toolchain.toml  shell.nix
.cargo/: mutants.toml
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
benches/: retry_hot_paths.rs
docs/: SPEC.md
docs/adr/: 0001-no-macro-fold-non-alloc-hook-setters.md  0002-defer-builder-docs-ergonomics-refactor.md  0003-ungate-multi-hook-from-alloc.md  0004-split-async-builder-from-state-machine.md  0005-unify-clock-and-sleeper-into-one-injected-clock.md  0006-paired-decision-classifier-engine.md
docs/spikes/: classifier-shape-findings.md  unified-clock-findings.md  ux-polish-candidates.md
examples/: async-cancel.rs  async-polling.rs  basic-retry.rs  custom-outcome.rs  hooks-and-stats.rs  polling-terminal-failure.rs  sync-cancel.rs  testing-with-virtual-clock.rs
scripts/: replace-name.sh  setup-dev.sh  update-tool-versions.sh
src/: cancel.rs  clock.rs  compat.rs  decision.rs  engine.rs  error.rs  lib.rs  on.rs  policy.rs  predicate.rs  sleep.rs  state.rs  stats.rs  stop.rs  test_util.rs  wait.rs
src/engine/: async_engine.rs  error.rs  hooks.rs  mod.rs  op.rs  state.rs  stats.rs  step.rs
src/policy/: async_retry.rs  common.rs  ext.rs  mod.rs  sync.rs  time.rs
src/policy/execution/: async_exec.rs  common.rs  hooks.rs  mod.rs  sync_exec.rs
src/policy/ext/: async_builder.rs  easy_shared.rs  mod.rs  sync_builder.rs
src/predicate/: mod.rs
src/stop/: composition.rs  mod.rs  strategies.rs
src/wait/: composition.rs  jitter.rs  math.rs  mod.rs  strategies.rs
tests/: allocation.rs  allocation_hot_paths.rs  async_execution.rs  async_no_alloc.rs  callbacks_hooks.rs  cancellation.rs  clock.rs  clock_adapters.rs  composition.rs  core_types.rs  ergonomic_additions.rs  ergonomics.rs  error.rs  ext.rs  ext_traits.rs  feature_compat.rs  hooks.rs  jitter.rs  parity.rs  phase1_core_types.rs  phase2_stop_strategies.rs  phase3_wait_strategies.rs  phase4_retry_predicates.rs  phase5_policy_sync.rs  phase6_async_execution.rs  phase7_callbacks_hooks.rs  phase8_stats.rs  phase9_feature_compat.rs  policy_async.rs  policy_sync.rs  predicate.rs  prelude.rs  properties.rs  quality_properties.rs  retry_predicates.rs  sleeper.rs  state.rs  stats.rs  stop.rs  stop_strategies.rs  (+9 more)
tests/policy_async/: cases.rs
tests/policy_sync/: cases.rs
tests/utils/: property_seed.rs
