[package]
name = "tenacious"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Composable retry policies for fallible operations and polling."
documentation = "https://docs.rs/tenacious"
readme = "README.md"
keywords = ["retry", "backoff", "polling", "resilience", "no-std"]
categories = ["asynchronous", "no-std", "rust-patterns"]

[features]
default = ["std"]

# std: enables std::thread::sleep for sync execution, Instant for elapsed tracking,
#      std::error::Error impl on RetryError, and std-gated sleep impls.
std = ["alloc", "embassy-time?/std"]

# alloc: enables heap allocation. Required for Box<dyn Stop>, Box<dyn Wait>,
#        Box<dyn Predicate>, and type-erased policy storage.
alloc = []

# Runtime-specific async sleep implementations.
tokio-sleep = ["dep:tokio", "std"]
embassy-sleep = ["dep:embassy-time"]
gloo-timers-sleep = ["dep:gloo-timers"]
futures-timer-sleep = ["dep:futures-timer", "std"]
tokio-cancel = ["dep:tokio-util"]
jitter = ["dep:rand"]
serde = ["dep:serde"]
strict-futures = []

[dependencies]
pin-project-lite = "0.2"
tokio = { version = "1", default-features = false, features = [
  "time",
], optional = true }
embassy-time = { version = "0.3", default-features = false, optional = true }
futures-timer = { version = "3", optional = true }
rand = { version = "0.8", default-features = false, features = [
  "small_rng",
], optional = true }
serde = { version = "1", default-features = false, features = [
  "derive",
], optional = true }
tokio-util = { version = "0.7", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1"
stats_alloc = "0.1"

[[bench]]
name = "retry_hot_paths"
harness = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", default-features = false, features = [
  "futures",
], optional = true }
