[package]
name = "relentless"
version = "0.7.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Composable retry policies for fallible operations and polling."
documentation = "https://docs.rs/relentless"
readme = "README.md"
homepage = "https://docs.rs/relentless"
repository = "https://github.com/camercu/relentless"
keywords = ["retry", "backoff", "polling", "resilience", "no-std"]
categories = ["asynchronous", "no-std", "rust-patterns"]

[features]
default = ["std"]

# std: enables std::thread::sleep for sync execution, Instant for elapsed tracking,
#      std::error::Error impl on RetryError, and std-gated sleep impls.
std = ["alloc", "embassy-time?/std"]

# alloc: enables heap allocation. Required for Box<dyn Stop>, Box<dyn Wait>,
#        Box<dyn Predicate>, type-erased policy storage, Arc-based cancelers,
#        and multiple hooks per hook point. Async retry itself does not require it.
alloc = []

# Runtime-specific async sleep helper constructors. Multiple adapters can be
# enabled together; callers choose explicitly at `.sleep(...)`.
tokio-sleep = ["dep:tokio", "std"]
embassy-sleep = ["dep:embassy-time"]
gloo-timers-sleep = ["dep:gloo-timers"]
futures-timer-sleep = ["dep:futures-timer", "std"]

[dependencies]
pin-project-lite = "0.2"
tokio = { version = "1", default-features = false, features = [
  "time",
], optional = true }
embassy-time = { version = "0.3", default-features = false, optional = true }
futures-timer = { version = "3", optional = true }
[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
stats_alloc = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "async-polling"
required-features = ["tokio-sleep"]

[[example]]
name = "async-cancel"
required-features = ["tokio-sleep"]

[[bench]]
name = "retry_hot_paths"
harness = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", default-features = false, features = [
  "futures",
], optional = true }
